fix(pure-cell): fixed overflow PureCell.Text container (#429)

--- a/packages/pure-cell/src/components/text/index.module.css
+++ b/packages/pure-cell/src/components/text/index.module.css
@@ -18,6 +18,7 @@
     flex-wrap: nowrap;
     justify-content: space-between;
     margin: var(--gap-3xs) 0;
+    word-break: break-word;
 }
 
 .component {
